# SkyrimMaterialSpec

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
examples/: ComplexMaterial.jsonc  PBR.jsonc  Parallax.jsonc  Swap.jsonc
include/: SkyrimMaterialEnv.hpp
src/: SkyrimMaterialEnv.cpp
